--- a/index.html
+++ b/index.html
@@ -13,31 +13,37 @@
         <div class="result_field">
             <!-- Container for user and BOT result images -->
             <div class="result_images">
-                <span class="user_result">
+                <span class="human_result">
                     <img src="images/rock.png" alt="User's choice image" />
                 </span>
-                <span class="bot_result">
+                <span class="computer_result">
                     <img src="images/rock.png" alt="BOT's choice image" />
                 </span>
             </div>
             <!-- Display the game result message -->
             <div class="result">Let's Play!</div>
+            <div class="winner"></div>
         </div>
         
         <!-- Options for user to choose from -->
         <div class="option_images">
-            <span class="option_image">
+            <div class="option_image">
                 <img src="images/rock.png" alt="Rock image" />
                 <p>Rock</p>
-            </span>
-            <span class="option_image">
+            </div>
+            <div class="option_image">
                 <img src="images/paper.png" alt="Paper image" />
                 <p>Paper</p>
-            </span>
-            <span class="option_image">
+            </div>
+            <div class="option_image">
                 <img src="images/scissors.png" alt="Scissors image" />
                 <p>Scissors</p>
-            </span>
+            </div>
+        </div>
+
+        <div class="scores">
+            <div class="human_score"></div>
+            <div class="computer_score"></div>
         </div>
     </section>
   <script src="script.js" defer></script>
